<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <EditText
            android:id="@+id/etNik"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nik"
            android:inputType="number" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nama_lengkap"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tanggal_lahir"
            android:inputType="date" />

        <Spinner
            android:id="@+id/spHubungan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spKesehatan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Spinner
            android:id="@+id/spPendidikan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnSimpanAnggota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/simpan" />

    </LinearLayout>
</ScrollView>
